--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,32 @@
+/**
+ * Colors 
+ */
 body {
   position: relative;
-  background: #888;
-  font-family: "Helvetical", sans-serif;
+  background: #f4f4f4;
+  font-family: "Raleway","Helvetical Nue", sans-serif;
 }
 
-.navbar-inverse {
-  background: #722872;
+.navbar {
+  background: #feffff;
   color: #592059;
-  border-color: #592059;
+  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-.navbar-inverse .navbar-nav > li {
+.navbar .navbar-nav > li {
   text-transform: uppercase;
   margin: 10px 0;
   padding: 10px;
   font-weight: bold;
   letter-spacing: 2px;
 }
-.navbar-inverse .navbar-nav > li > a {
+.navbar .navbar-nav > li > a {
   padding: 10px 15px;
 }
-.navbar-inverse .navbar-nav > li.active > a {
+.navbar .navbar-nav > li.active > a {
   color: #555;
   background: #e7e7e7;
 }
-.navbar-inverse .navbar-nav > li.active > a:hover {
+.navbar .navbar-nav > li.active > a:hover {
   color: #555;
   background: #e7e7e7;
 }
@@ -36,7 +39,7 @@ body {
 }
 
 hr {
-  border: solid 3px;
+  border: solid 3px #daad86;
   max-width: 512px;
   margin: 40px auto;
 }
@@ -44,7 +47,9 @@ hr:after {
   content: '\f121';
   font-family: FontAwesome;
   display: inline-block;
+  color: #daad86;
   position: relative;
+  background: #feffff;
   top: -.7em;
   padding: 0 .25em;
   font-size: 2.3em;
@@ -54,13 +59,14 @@ hr:after {
 h2 {
   text-transform: uppercase;
   font-weight: bold;
+  color: #daad86;
 }
 
 #about {
-  background: #aaa;
+  background: #feffff;
   margin-top: 80px;
   padding: 50px;
-  color: #fff;
+  color: #5a5c51;
   text-align: right;
 }
 #about .intro-text {
@@ -74,24 +80,23 @@ h2 {
   margin-right: 0;
 }
 #about hr:after {
-  background: #aaa;
   margin-right: -3px;
 }
 #about .img-responsive {
   border-radius: 50%;
   padding: 30px;
 }
+#about .name {
+  font-weight: bold;
+  color: #daad86;
+}
 
 #portfolio,
 #contact {
-  background: #eee;
+  background: #feffff;
   text-align: center;
-  color: #888;
+  color: #5a5c51;
   padding: 50px;
-}
-#portfolio hr:after,
-#contact hr:after {
-  background: #eee;
 }
 
 .list-group-item {
@@ -129,15 +134,15 @@ h2 {
   margin-top: 30px;
   font-size: 20px;
   padding: 10px 30px;
-  background: #722872;
-  color: #fff;
-  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.2);
+  background: #feffff;
+  color: #5a5c51;
+  border: 2px solid #5a5c51;
   transition: all .3s ease-in-out;
 }
 #contact .contact__form .btn-default:hover {
-  background: #fff;
-  border: 2px solid #722872;
-  color: #722872;
+  background: #373737;
+  border: 2px solid #373737;
+  color: #feffff;
 }
 #contact .contact__text {
   color: #666;
@@ -148,7 +153,7 @@ h2 {
 }
 
 .footer-above {
-  background: #aaa;
+  background: #373737;
   color: #fff;
   padding: 50px 0;
 }
@@ -161,7 +166,7 @@ h2 {
   font-size: 20px;
 }
 .footer-above p > a {
-  color: #722872;
+  color: #337ab7;
 }
 .footer-above p > a:hover {
   cursor: pointer;
@@ -182,14 +187,14 @@ h2 {
   transition: all .3s ease-in-out;
 }
 .footer-above .accounts > li .btn-social:hover {
-  color: #722872;
-  background: #fff;
+  color: #337ab7;
+  background: #feffff;
   border-color: #fff;
 }
 
 .footer-below {
-  background: #722872;
-  color: #fff;
+  background: #feffff;
+  color: #5a5c51;
 }
 .footer-below .copyright {
   margin: 0;
