--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,24 @@
 /**
  * Colors 
  */
+:root {
+  --primary: #E66000;
+  --secondary: #0C0152;
+}
+
+.icon-bar {
+  background: var(--primary);
+}
+
 body {
   position: relative;
   background: #f4f4f4;
+  color: #0C0152 !important;
   font-family: "Raleway","Helvetical Nue", sans-serif;
 }
 
 .navbar {
   background: #feffff;
-  color: #592059;
   box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .navbar .navbar-nav > li {
@@ -21,10 +30,12 @@ body {
 }
 .navbar .navbar-nav > li > a {
   padding: 10px 15px;
+  color: var(--secondary);
 }
 .navbar .navbar-nav > li.active > a {
-  color: #555;
-  background: #e7e7e7;
+  color: var(--primary);
+  /* background: var(--primary); */
+  border-bottom: 3px solid var(--primary);
 }
 .navbar .navbar-nav > li.active > a:hover {
   color: #555;
@@ -40,7 +51,7 @@ body {
 }
 
 hr {
-  border: solid 3px #daad86;
+  border: solid 3px var(--primary);
   max-width: 512px;
   margin: 40px auto;
 }
@@ -57,10 +68,9 @@ hr:after {
   margin-right: 0;
 }
 
-h2 {
-  text-transform: uppercase;
+h1 {
   font-weight: bold;
-  color: #daad86;
+  color: var(--primary);
 }
 
 #about {
@@ -76,6 +86,9 @@ h2 {
 }
 #about .about__title {
   font-size: 22px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: var(--secondary);
 }
 #about hr {
   margin-right: 0;
@@ -151,11 +164,11 @@ h2 {
   font-size: 20px;
   text-align: left;
   margin-top: 35px;
-  padding: 0 30px;
+  /* padding: 0 30px; */
 }
 
 .footer-above {
-  background: #373737;
+  background: var(--secondary);
   color: #fff;
   padding: 50px 0;
 }
@@ -189,9 +202,9 @@ h2 {
   transition: all .3s ease-in-out;
 }
 .footer-above .accounts > li .btn-social:hover {
-  color: #337ab7;
+  color: var(--secondary);
   background: #feffff;
-  border-color: #fff;
+  border-color: var(--primary);
 }
 
 .footer-below {
@@ -218,7 +231,13 @@ h2 {
 }
 
 .contact__info {
-  text-align: right;
-  margin-top: 300px;
+  text-align: left;
+  color: var(--primary);
+  font-size: 18px;
+  margin-top: 200px;
+}
+
+.footer-name {
+  color: var(--primary) !important;
 }
 /*# sourceMappingURL=style.css.map */
